@@ -50,6 +50,7 @@
 - API Addition: Box2D Shape now implements Disposable
 - API Addition: Addes Tooltip#setTouchIndependent; see #6758
 - API ADDITION: Emulate Timer#isEmpty on GWT
+- API Addition: Bits add copy constructor public Bits (Bits bitsToCpy)
 
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
